--- a/lesson3/lesson3_2.ipynb
+++ b/lesson3/lesson3_2.ipynb
@@ -17,6 +17,62 @@
    "source": [
     "print(f\"Hello, Python!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "2f6198f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       *\n",
+      "      ***\n",
+      "     *****\n",
+      "    *******\n",
+      "   *********\n",
+      "  ***********\n",
+      " *************\n",
+      "***************\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = 0\n",
+    "t = 8\n",
+    "for i in range(t):\n",
+    "    print(\" \"*(t-1)+\"*\"*(s+1)+\"*\"*(s))\n",
+    "    s+=1\n",
+    "    t-=1\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "85f25129",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "不可以開車\n",
+      "=========\n",
+      "The End\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = int(input(\"請輸入年齡：\"))\n",
+    "if age >= 18:\n",
+    "    print(\"可以開車\" + \"\\n=========\")\n",
+    "else:\n",
+    "    print(\"不可以開車\" + \"\\n=========\")\n",
+    "print(\"The End\")"
+   ]
   }
  ],
  "metadata": {
