--- a/lesson4/lesson4_2.ipynb
+++ b/lesson4/lesson4_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f97b88e3",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "未滿18\n",
-      "再等1年，就可以考駕照\n"
+      "滿18了\n",
+      "可以考駕照\n",
+      "The End\n"
      ]
     }
    ],
@@ -26,17 +27,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "13d4d5c2",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "未滿18\n",
-      "不可以考駕照\n",
-      "The End\n"
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m age = \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m請輸入年齡：\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m age < \u001b[32m18\u001b[39m:\n\u001b[32m      3\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m未滿18\u001b[39m\u001b[33m\"\u001b[39m + \u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m不可以考駕照\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mValueError\u001b[39m: invalid literal for int() with base 10: ''"
      ]
     }
    ],
@@ -44,12 +47,61 @@
     "age = int(input(\"請輸入年齡：\"))\n",
     "if age < 18:\n",
     "    print(\"未滿18\" + \"\\n不可以考駕照\")\n",
+    "elif age <= 25:\n",
+    "    print(\"可以考駕照\")\n",
     "else:\n",
-    "    if age <= 25:\n",
-    "        print(\"可以考駕照\")\n",
-    "    else:\n",
-    "        print(\"可以考大型重機駕照\")\n",
+    "    print(\"可以考大型重機駕照\")\n",
     "print(\"The End\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "4609d9e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "丁\n"
+     ]
+    }
+   ],
+   "source": [
+    "score = int(input(\"成績\"))\n",
+    "if score >= 90:\n",
+    "    print(\"優\")\n",
+    "elif score >= 80:\n",
+    "    print(\"甲\")\n",
+    "elif score >= 70:\n",
+    "    print(\"乙\")\n",
+    "elif score >= 60:\n",
+    "    print(\"丙\")\n",
+    "else:\n",
+    "    print(\"丁\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0ade198",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "正常\n"
+     ]
+    }
+   ],
+   "source": [
+    "pre = int(input(\"\"))\n",
+    "if not pre < 90 or pre > 120:\n",
+    "    print(\"不正常\")\n",
+    "else:\n",
+    "    print(\"正常\")"
    ]
   }
  ],
